--- a/src/Components/Hero.module.css
+++ b/src/Components/Hero.module.css
@@ -44,13 +44,13 @@
 
 .contactBtn {
   text-decoration: none;
-  background-color: var(--color-secondary);
+  background: var(--color-secondary);
   color: var(--color-text);
   border-radius: 90px;
   font-size: 20px;
   font-weight: 600;
   padding: 17px 26px;
-  box-shadow: 0 15px 40px var(--card-shadow);
+  transition: background 0.5s ease;
 }
 .contactBtn:hover{
   box-shadow:0 15px 40px var(--card-hover-shadow);
