--- a/src/Components/Project.module.css
+++ b/src/Components/Project.module.css
@@ -77,7 +77,7 @@
 
 .sourceBtn {
   background: var(--color-secondary);
-  color: rgb(223, 223, 238);
+  color: var(--color-text);
   padding: 10px 18px;
   border-radius: 8px;
   text-decoration: none;
