--- a/src/Components/About.module.css
+++ b/src/Components/About.module.css
@@ -48,7 +48,7 @@
 .title {
   font-size: 36px;
   font-weight: 700;
-  color: var(--color-primary);
+  color: var(--color-text);
   margin-bottom: 20px;
 }
 
@@ -56,6 +56,7 @@
   font-size: 18px;
   line-height: 1.6;
   max-width: 600px;
+  color: var(--color-subtext);
 }
 
 /* Responsive Design */
