--- a/src/Components/Contact.module.css
+++ b/src/Components/Contact.module.css
@@ -29,6 +29,7 @@
   align-items: center;
   gap: 10px;
   background: var(--card-bg);
+  color : var(--color-text);
   padding: 12px 20px;
   border-radius: 10px;
   box-shadow: 0px 5px 15px var(--card-shadow);
@@ -63,8 +64,8 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background: var(--color-primary);
-  color: white;
+  background: var(--color-secondary);
+  color: var(--color-accent);
   padding: 10px 15px;
   font-size: 16px;
   border: none;
