--- a/src/Components/Hero.module.css
+++ b/src/Components/Hero.module.css
@@ -22,14 +22,14 @@
 .title {
   font-size: 42px;
   font-weight: 700;
-  color: black;
   margin-bottom: 22px;
   font-family: var(--font-roboto);
   background-clip: text;
   background: linear-gradient(
-    90deg,
-    var(--color-secondary) 70%,
-    rgba(14, 14, 14, 0) 120%
+  90deg,
+  var(--color-secondary) 100%,
+  var(--color-secondary) 100%
+
   );
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -39,13 +39,14 @@
   font-size: 25px;
   font-family: var(--font-roboto);
   margin-bottom: 22px;
+  color: var(--color-text);
   
 }
 
 .contactBtn {
   text-decoration: none;
   background: var(--color-secondary);
-  color: var(--color-text);
+  color: var(--color-accent);
   border-radius: 90px;
   font-size: 20px;
   font-weight: 600;
